website/versioned_docs/version-2.4.0/web.globaljsoncontainerstorage.md
---
id: version-2.4.0-web.globaljsoncontainerstorage
title: GlobalJSONContainerStorage class
hide_title: true
original_id: web.globaljsoncontainerstorage
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->


## GlobalJSONContainerStorage class


<b>Signature:</b>

```typescript
export declare class GlobalJSONContainerStorage implements ContainerStorage 
```

## Constructors

|  Constructor | Modifiers | Description |
|  --- | --- | --- |
|  [(constructor)(driver)](./web.globaljsoncontainerstorage._constructor_.md) |  | Constructs a new instance of the <code>GlobalJSONContainerStorage</code> class |

## Methods

|  Method | Modifiers | Description |
|  --- | --- | --- |
|  [delAccessToken(namespace)](./web.globaljsoncontainerstorage.delaccesstoken.md) |  |  |
|  [delAnonymousKeyID(namespace)](./web.globaljsoncontainerstorage.delanonymouskeyid.md) |  |  |
|  [delOAuthCodeVerifier(namespace)](./web.globaljsoncontainerstorage.deloauthcodeverifier.md) |  |  |
|  [delOAuthRedirectAction(namespace)](./web.globaljsoncontainerstorage.deloauthredirectaction.md) |  |  |
|  [delOIDCCodeVerifier(namespace)](./web.globaljsoncontainerstorage.deloidccodeverifier.md) |  |  |
|  [delRefreshToken(namespace)](./web.globaljsoncontainerstorage.delrefreshtoken.md) |  |  |
|  [delSessionID(namespace)](./web.globaljsoncontainerstorage.delsessionid.md) |  |  |
|  [delUser(namespace)](./web.globaljsoncontainerstorage.deluser.md) |  |  |
|  [getAccessToken(namespace)](./web.globaljsoncontainerstorage.getaccesstoken.md) |  |  |
|  [getAnonymousKeyID(namespace)](./web.globaljsoncontainerstorage.getanonymouskeyid.md) |  |  |
|  [getExtraSessionInfoOptions(namespace)](./web.globaljsoncontainerstorage.getextrasessioninfooptions.md) |  |  |
|  [getOAuthCodeVerifier(namespace)](./web.globaljsoncontainerstorage.getoauthcodeverifier.md) |  |  |
|  [getOAuthRedirectAction(namespace)](./web.globaljsoncontainerstorage.getoauthredirectaction.md) |  |  |
|  [getOIDCCodeVerifier(namespace)](./web.globaljsoncontainerstorage.getoidccodeverifier.md) |  |  |
|  [getRefreshToken(namespace)](./web.globaljsoncontainerstorage.getrefreshtoken.md) |  |  |
|  [getSessionID(namespace)](./web.globaljsoncontainerstorage.getsessionid.md) |  |  |
|  [getUser(namespace)](./web.globaljsoncontainerstorage.getuser.md) |  |  |
|  [setAccessToken(namespace, accessToken)](./web.globaljsoncontainerstorage.setaccesstoken.md) |  |  |
|  [setAnonymousKeyID(namespace, kid)](./web.globaljsoncontainerstorage.setanonymouskeyid.md) |  |  |
|  [setExtraSessionInfoOptions(namespace, options)](./web.globaljsoncontainerstorage.setextrasessioninfooptions.md) |  |  |
|  [setOAuthCodeVerifier(namespace, authorizationCode)](./web.globaljsoncontainerstorage.setoauthcodeverifier.md) |  |  |
|  [setOAuthRedirectAction(namespace, oauthRedirectAction)](./web.globaljsoncontainerstorage.setoauthredirectaction.md) |  |  |
|  [setOIDCCodeVerifier(namespace, code)](./web.globaljsoncontainerstorage.setoidccodeverifier.md) |  |  |
|  [setRefreshToken(namespace, refreshToken)](./web.globaljsoncontainerstorage.setrefreshtoken.md) |  |  |
|  [setSessionID(namespace, sessionID)](./web.globaljsoncontainerstorage.setsessionid.md) |  |  |
|  [setUser(namespace, user)](./web.globaljsoncontainerstorage.setuser.md) |  |  |

